[package]
name = "mozsvc-common-wvp"
version = "0.1.0"
authors = ["wavepack3t <wavepack3t@stackit>"]
description = "Common utilities for Mozilla server side apps"
repository = "https://github.com/wavepack3t/common-rs/"
homepage = "https://github.com/wavepack3t/common-rs/"
license = "MPL-2.0"

[badges]
travis-ci = { repository = "mozilla-services/common-rs" }

[dependencies]
lazy_static = "1.0"
hostname = "0.1"
reqwest = "0.9.4"
